--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,7 @@
             </div>
             <div id="post">
         <h1>Este es el título atractivo
-            e intresante del post</h1>
+            e interesante del post</h1>
             <p>Y este es el parrafo de
                 inicio donde vamos a explicar 
                 las cosas increibles que se 
